multipass-yaml/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-test
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ing.test.microk8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ing-test
                port:
                  number: 80
